--- a/static/sass/Discover/Discover.sass
+++ b/static/sass/Discover/Discover.sass
@@ -49,6 +49,12 @@
 				.button
 					display: none
 
+				.artwork-playing--wrapper.hide-on-mobile
+					visibility: hidden
+
+				.artwork-playing--wrapper.hide-content
+					visibility: hidden
+
 				.artwork-playing--wrapper
 					position: absolute
 					top: 50%
@@ -234,6 +240,9 @@
 						display: flex
 						flex-direction: row-reverse
 						align-items: center
+
+					.artwork-playing--wrapper.hide-on-mobile
+						visibility: visible
 
 					.artwork-playing--wrapper
 						max-width: $artworkWidth
