--- a/static/sass/Discover/TeachDiscoverModals.sass
+++ b/static/sass/Discover/TeachDiscoverModals.sass
@@ -19,5 +19,9 @@
 .teach-modal--wrapper.like-UI-info
 	position: absolute
 	bottom: 1rem
-	left: 234px
+	left: 2rem
 	align-items: flex-start
+
+@media screen and (min-width: $desktop-min-width)
+	.teach-modal--wrapper.like-UI-info
+		left: 234px
